# basicToDo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/linters/: .isort.cfg
.github/workflows/: codeql.yml  e2e.yml  frontend.yml  python-app.yml  python-app.yml.backup  super-linter.yml
.specify/: feature.json
.specify/memory/: constitution.md
backend/: SOFT_DELETE_IMPLEMENTATION_PLAN.md  architecture.puml  config_dummy.json  pyproject.toml  todo.db
backend/app/: api.py  config.py  database.py  factory.py  logger.py  main.py  models.py  schemas.py  todo.py  webservice.py
backend/app/api/: api.py
backend/app/backend/: todo.db
backend/app/business_logic/: decorators.py  exceptions.py  todo_service.py  webservice.py
backend/app/business_logic/builders/: builder_interface.py  todo_entry_builder.py
backend/app/business_logic/validators/: __init__.py  field_validator.py  input_sanitizer.py  uuid_validator.py  validator_factory.py  validator_interface.py
backend/app/data_access/: database.py  repository.py
backend/app/models/: todo.py
backend/app/schemas/: todo.py
backend/app/schemas/api_responses/: api_response.py  delete_to_do_response.py  get_list_to_do_response.py  get_to_do_response.py  to_do_response.py
backend/app/schemas/data_schemes/: create_todo_schema.py  todo_schema.py  update_todo_schema.py
backend/backend/: todo.db
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_api_endpoints.py  test_sql_injection_protection.py  tests_service_to_do.py  tests_todo.py  todo.db
backend/tests/test_api/: conftest.py  test_api_endpoints.py  test_api_error_responses.py  test_delete_to_do.py  test_get_to_do_api.py  test_list_deleted.py  test_list_to_do.py  test_response_schemata.py  test_restore_endpoint.py  test_setup_for_api_endpoins.py  test_update_to_do.py
backend/tests/test_builders/integration/: conftest.py  test_todo_entry_builder_integration.py  tests_todo_entry_builder_integration_consistency.py
backend/tests/test_builders/unit/: conftest.py  test_todo_entry_builder.py  tests_tode_entry_builder_edge_cases.py
backend/tests/test_data/: __init__.py  constants.py  factories.py
backend/tests/test_service/integration/: conftest.py  test_create_todo_integration.py  test_delete_todo_integration.py  test_get_all_todos_integration.py  test_get_todo_integration.py  test_mark_todo_done_integration.py  test_update_todo_integration.py
backend/tests/test_service/unit/: conftest.py  test_count_deleted.py  test_create_todo.py  test_delete_todo.py  test_get_all_todos.py  test_get_todo.py  test_mark_todo_done.py  test_repository_interaction.py  test_restore_todo.py  test_update_todo.py
backend/tests/test_validators/integration/: test_field_validator_integration.py  test_input_sanitizer_integration.py  test_uuid_validator_integration.py
backend/tests/test_validators/unit/: test_field_validator.py  test_input_sanitizer.py  test_uuid_validator.py  test_validator_factory.py
documentation/: backend.md  backend.puml  frontend.md
frontend/: package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e/: global-setup.ts  smoke.spec.ts  todo-crud.spec.ts  todo-validation.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  Todos.tsx
frontend/src/config/: env.ts
frontend/src/contexts/: TodosContext.tsx
frontend/src/hooks/: useToast.ts  useTodoValidation.ts
specs/001-modernize-fullstack/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-modernize-fullstack/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+30 files in other folders)
