[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "basicToDo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "factory-boy>=3.3.0",
    "fastapi[standard]>=0.115.12",
    "mypy>=1.16.0",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.2.0",
    "slowapi>=0.1.9",
    "sqlalchemy[mypy]>=2.0.41",
    "sqlalchemy-stubs>=0.4",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy2-stubs>=0.0.2a38",
    "types-greenlet>=3.2.0.20250417",
    "types-pygments>=2.19.0.20250516",
    "types-pyyaml>=6.0.12.20250516",
    "types-ujson>=5.10.0.20250326",
    "uvicorn>=0.34.2",
]
[tool.setuptools_scm]
version = "v0.1.0"

[tool.setuptools]
packages = ["backend"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
incremental = false
ignore_errors = false
pretty = true
show_error_context = true
show_traceback = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]
branch = true
relative_files = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
